# auditory-learning

./: .env.example  .gitignore  Makefile  README.md  prompt.txt  pyproject.toml
auditory_learning/: server.py
auditory_learning/utils/: voice_utils.py
docker/: Dockerfile
frontend/: index.html
frontend/src/: App.tsx  Audio.tsx  UrlInput.tsx  main.tsx
scripts/: launch.sh  serve.sh
